--- a/layout/accesslayout.html
+++ b/layout/accesslayout.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/custom.css">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="Login.css"/>
+  <link rel="stylesheet" href="../style/Login.css"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 <script src="jquery-3.2.1.min.js"></script>
@@ -42,7 +42,7 @@
 
   <a href="#"><img class="smaller-image thick-green-border" src="http://sguru.org/wp-content/uploads/2017/06/cool-profile-pictures-8DtpgWJB_400x400.jpeg" alt="A cute orange cat lying on its back. "></a>
   </br>  </br>
-  <form action="/php/login.php" method="post">
+  <form action="../php/login.php" method="post">
         <input  style="width: 400px;"  type="text" name="username" placeholder="Username" required>
       </br>
           <input  style="width: 400px;"  type="password" name="password" placeholder="Password" required>
