A lot of changes

--- a/layout/Mainpage.html
+++ b/layout/Mainpage.html
@@ -1,5 +1,3 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
 <head>
 
     <!-- Required meta tags always come first -->
@@ -11,18 +9,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
     <link rel="stylesheet" href="css/custom.css">
 <!-- Add icon library -->
+<link rel="stylesheet" href="../style/Mainpage.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../style/Login.css"/>
+  <link rel="stylesheet" href="Mainpage.css"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-<script src="jquery-3.2.1.min.js"></script>
-<script src="script.js"></script>
+
 </head>
 
 <body>
-  <div id = "mainPanel" class = "square">
-  <div id = "errorPanel" class = "square">
-  </div>
 <div id="Main" class="container-fluid">
 
   <div id="RowStarter" class="row">
@@ -38,19 +33,28 @@
     <div id="MainStartingImgBlock">
     <div id="MainStartingImg" class="BigImg">
       <div class="BigImg-wrapper" layout="row" layout-align="center center">
+        <div layout="column">
+          <h1 class="md-display-2"><underlineImg>iWork</underlineImg></h1>
+          </div>
+        </br>
         <div id="FontAwesomeIconsTopImg">
-
-  <a href="#"><img class="smaller-image thick-green-border" src="http://sguru.org/wp-content/uploads/2017/06/cool-profile-pictures-8DtpgWJB_400x400.jpeg" alt="A cute orange cat lying on its back. "></a>
-  </br>  </br>
-  <form action="/Database-Project/php/login.php" method="post">
-        <input  style="width: 400px;"  type="text" name="username" placeholder="Username" required>
+          <button type="button" class="btn btn-default">Login</button>
+          <button type="button" class="btn btn-default">Register</button>
+        </br></br></br></br>
+      <form action="/Database-Project/php/MainPage.php" method="post">
+        <input  style="width: 400px;"  type="text" placeholder="Enter Company name or Type or address" name ="searchText" required>
+        <select name="searchOption">
+           <option value="Name">Name</option>
+           <option value="Type">Type</option>
+           <option value="Address">Address</option>
+       </select>
+       <input class="btn btn-primary "type="submit" name="searchButton"  value = "Search">
+     </form>
+     <button class=" btn btn-danger" type="submit">View All Companies</button>
       </br>
-          <input  style="width: 400px;"  type="password" name="password" placeholder="Password" required>
-        </br>  </br>
-        <div  class="col-xs-12">
-        <input class="btn btn-primary "type="submit" name="login" style="width: 400px;" value = "Login">
-        </form>
-      </div>
+        <a href="https://www.facebook.com/" class="fa fa-facebook" title="Facebook"></a>
+        <a href="https://twitter.com/" class="fa fa-twitter" title="Twitter"></a>
+         <a href="https://mail.google.com/" class="fa fa-envelope" title="Email"></a>
           </div>
         </div>
         </div>
@@ -73,6 +77,4 @@
     </div>
   </div>
 </div>
-</div>
 </body>
-</html>
