--- a/Database-Project/layout/Mainpage.html
+++ b/Database-Project/layout/Mainpage.html
@@ -38,8 +38,8 @@
           </div>
         </br>
         <div id="FontAwesomeIconsTopImg">
-          <button type="button" class="btn btn-default">Login</button>
-          <button type="button" class="btn btn-default">Register</button>
+        <a href="accesslayout.html">  <button  type="button" class="btn btn-default">Login</button></a>
+        <a href="Register.html">  <button href="Register.html" type="button" class="btn btn-default">Register</button></a>
         </br></br></br></br>
       <form action="/Database-Project/php/MainPage.php" method="post">
         <input  style="width: 400px;"  type="text" placeholder="Enter Company name or Type or address" name ="searchText" required>
