Huge update Finished the mandatory part

--- a/style/Profile.css
+++ b/style/Profile.css
@@ -21,7 +21,7 @@ body {
 }
 
 .BigImg {
-  background-image: url("https://blog.oxforddictionaries.com/wp-content/uploads/mountain-names.jpg");
+  background-image: url("https://static.pexels.com/photos/459225/pexels-photo-459225.jpeg");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
