--- a/style/applyJobRedirection.css
+++ b/style/applyJobRedirection.css
@@ -21,7 +21,7 @@ body {
 }
 
 .BigImg {
-  background-image: url("https://jvtea44x1mh3gctjp1q2nymo-wpengine.netdna-ssl.com/wp-content/uploads/2015/12/eMarketing-Egypt-to-release-first-study-on-internet-users%E2%80%99-engagement-with-online-advertising.jpg");
+  background-image: url("http://neas-seminars.com/wp-content/uploads/2014/06/registration_form.jpg");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
@@ -43,19 +43,26 @@ body {
 
 .fa {
   padding: 20px;
-  font-size: 30px !important;
+  font-size: 30px;
   width: 50px;
   text-align: center;
   text-decoration: none;
-  color: white;
-  font-weight: bold;
 }
 
 /* Add a hover effect if you want */
 .fa:hover {
   opacity: 0.7;
 }
-
+.thick-green-border {
+   border-color: #555;
+   border-width: 2px;
+   border-style: solid;
+   border-radius: 50%;
+ }
+.fa {
+  color: white;
+  font-weight: bold;
+}
 
 underlineImg {
   padding-bottom: 5px;
