--- a/style/Mainpage.css
+++ b/style/Mainpage.css
@@ -21,7 +21,7 @@ body {
 }
 
 .BigImg {
-  background-image: url("https://jvtea44x1mh3gctjp1q2nymo-wpengine.netdna-ssl.com/wp-content/uploads/2015/12/eMarketing-Egypt-to-release-first-study-on-internet-users%E2%80%99-engagement-with-online-advertising.jpg");
+  background-image: url("/Database-Project/images/eMarketing-Egypt-to-release-first-study-on-internet-users’-engagement-with-online-advertising.jpg");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
