--- a/style/appology.css
+++ b/style/appology.css
@@ -21,7 +21,7 @@ body {
 }
 
 .BigImg {
-  background-image: url("http://theghosthuntuk.com/wp-content/uploads/2017/08/Hoia-Baciu-Forest-Circle-3.jpg");
+  background-image: url(">/Database-Project/images/Hoia-Baciu-Forest-Circle-3.jpg");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
