--- a/style/editPage.css
+++ b/style/editPage.css
@@ -21,7 +21,7 @@ body {
 }
 
 .BigImg {
-  background-image: url("/Database-Project/images/Hoia-Baciu-Forest-Circle-3.jpg");
+  background-image: url("/Database-Project/images/6897567-amazing-sunset-wallpaper.jpg");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
@@ -39,9 +39,30 @@ body {
   text-shadow: 0 4px 0 rgba(0, 0, 0, 0.12);
   position: relative;
   z-index: 1;
-
 }
 
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+.thick-green-border {
+   border-color: #555;
+   border-width: 2px;
+   border-style: solid;
+   border-radius: 50%;
+ }
+.fa {
+  color: white;
+  font-weight: bold;
+}
 
 underlineImg {
   padding-bottom: 5px;
@@ -66,7 +87,4 @@ footer {
 #FooterText {
   display: inline;
   font-size: 14px;
-}
-#stretch{
-  margin-bottom:  220px;
 }
