--- a/style/profileinfo.css
+++ b/style/profileinfo.css
@@ -27,11 +27,11 @@ body {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("/Database-Project/images/blurred.jpg");
 }
 
-.boxed {
-  width: 300px;
-  height: 300px;
+.box {
+  width: auto;
+  height: auto;
   left: -webkit-calc( 50% - 250px );
-  top: 20%;
+  top: auto;
   position: absolute;
   border-radius: 5px;
   -moz-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.6);
@@ -46,16 +46,11 @@ body {
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
   display: flex;
   transition: box-shadow .3s ease;
-}
-.boxed:active {
-  cursor: move;
   -moz-box-shadow: 0 20px 50px rgba(0, 0, 0, 0.9);
   -webkit-box-shadow: 0 20px 50px rgba(0, 0, 0, 0.9);
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.9);
 }
-.boxed .content {
-  margin: auto;
-}
+
 
 h1, h2, a, p {
   color: white;
@@ -183,4 +178,7 @@ footer {
 #FooterText {
   display: inline;
   font-size: 14px;
+}
+#stretch{
+  margin-bottom:  500px;
 }
